Add Projects page and navigation to main website

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,56 @@
-# macOS
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
 .DS_Store?
 ._*
@@ -7,30 +59,37 @@
 ehthumbs.db
 Thumbs.db
 
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Temporary folders
+tmp/
+temp/
+
+# AI model files
+*.pkl
+*.h5
+*.model
+models/weights/
+
+# Generated cards
+output/
+generated/
+
 # Windows
 Thumbs.db
 ehthumbs.db
 Desktop.ini
 
 # Linux
-*~
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-*.temp
-
-# Node modules (if you add JavaScript later)
-node_modules/
-
-# Build directories
-dist/
-build/ 
+*~ 
